# registreak

./: .editorconfig  .gitignore  COMPLETION_SUMMARY.md  DOCS_INDEX.md  IMPLEMENTATION.md  PROJECT_MAP.md  QUICKSTART.md  README_INTEGRATION.md  SETUP.md  STATUS.md  VERIFICATION_CHECKLIST.md  package-lock.json  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: .env  docker-compose.yml  pyproject.toml
backend/api/: Dockerfile  README  fake.py  pyproject.toml  run.py  test_totp.py
backend/api/app/: __init__.py  auth.py  controllers.py  models.py  routes.py  utils.py
backend/db/: init.sql
backend/scripts/: add_streak_columns.py
fish/: package-lock.json  package.json
fish/app/: globals.css  layout.tsx  page.tsx
fish/components/: lecturer-dashboard.tsx
fish/lib/: auth-context.tsx  auth.ts
gradle/wrapper/: gradle-wrapper.properties
paw/: .env.example  app.json  global.css  metro.config.js  package-lock.json  package.json  tailwind.config.js
paw/app/: _layout.tsx  index.tsx  lectures.tsx  login.tsx  modal.tsx  register.tsx
paw/app/(auth)/: login.tsx  register.tsx
paw/app/(tabs)/: _layout.tsx  account.tsx  attend.tsx  explore.tsx  index.tsx  streaks.tsx  (+2 more)
paw/components/: bottom-fade.tsx  fire-celebration.tsx  parallax-scroll-view.tsx  radial-progress.tsx  rolling-number.tsx  success-overlay.tsx
paw/constants/: colors.ts  theme.ts
paw/context/: auth-context.tsx
paw/contexts/: auth-context.tsx
paw/data/: attendance-data.json  leaderboard-data.json
paw/hooks/: use-color-scheme.web.ts
paw/services/: api.ts
(+10 files in other folders)
