[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Milo Sones",email = "102179233+MiloSones@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
